Update yang-data-api description
We are using just the artifactId, this patch adds a bit more descriptive
description.

Change-Id: I258ea9b3014d5a7271791720813cf4b4d147f93a
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/data/yang-data-api/pom.xml
+++ b/data/yang-data-api/pom.xml
@@ -19,7 +19,7 @@
     <artifactId>yang-data-api</artifactId>
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
-    <description>${project.artifactId}</description>
+    <description>Object model for normalized YANG-modeled data</description>
 
     <properties>
         <!-- FIXME: fix these up and set maven.javadoc.failOnWarnings=true -->
