--- a/codec/yang-data-codec-xml/pom.xml
+++ b/codec/yang-data-codec-xml/pom.xml
@@ -11,18 +11,18 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.opendaylight.yangtools</groupId>
-        <artifactId>bundle-parent</artifactId>
+        <artifactId>bnd-parent</artifactId>
         <version>14.0.8-SNAPSHOT</version>
-        <relativePath>../../bundle-parent</relativePath>
+        <relativePath>../../bnd-parent</relativePath>
     </parent>
 
     <artifactId>yang-data-codec-xml</artifactId>
-    <packaging>bundle</packaging>
+    <packaging>jar</packaging>
     <name>${project.artifactId}</name>
     <description>XML (RFC7950) encoding for NormalizedNodes</description>
 
     <properties>
-        <!-- FIXME: fix these up and set maven.javadoc.failOnWarnings=true -->
+        <!-- FIXME: fix these up and set <maven.javadoc.failOnWarnings>true</maven.javadoc.failOnWarnings> -->
         <doclint>all,-missing</doclint>
     </properties>
 
