--- a/binding/binding-runtime-api/pom.xml
+++ b/binding/binding-runtime-api/pom.xml
@@ -11,17 +11,18 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.opendaylight.yangtools</groupId>
-        <artifactId>bundle-parent</artifactId>
+        <artifactId>bnd-parent</artifactId>
         <version>14.0.8-SNAPSHOT</version>
-        <relativePath>../../bundle-parent</relativePath>
+        <relativePath>../../bnd-parent</relativePath>
     </parent>
 
     <artifactId>binding-runtime-api</artifactId>
-    <packaging>bundle</packaging>
+    <packaging>jar</packaging>
+    <name>${project.artifactId}</name>
     <description>YANG Binding runtime API</description>
 
     <properties>
-        <!-- FIXME: fix these up and set maven.javadoc.failOnWarnings=true -->
+        <!-- FIXME: fix these up and set <maven.javadoc.failOnWarnings>true</maven.javadoc.failOnWarnings> -->
         <doclint>all,-missing</doclint>
     </properties>
 
