Switch codegen to target Java 21
We are targeting Java 17 here, let's switch to using Java 21.

Change-Id: I0a772c0f0eed8fce4ea6814c4828c063f5dfc572
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/binding/binding-codegen/pom.xml
+++ b/binding/binding-codegen/pom.xml
@@ -112,7 +112,7 @@
                             <goal>compile</goal>
                         </goals>
                         <configuration>
-                            <javaSourceVersion>17</javaSourceVersion>
+                            <javaSourceVersion>${maven.compiler.release}</javaSourceVersion>
                             <outputDirectory>${project.build.directory}/generated-sources/xtend</outputDirectory>
                         </configuration>
                     </execution>
