Fix odl-yangtools-xpath-api description
We are missing a critical declaration, add it.

Change-Id: I0740971627a295fadada3c0345da895e37986c39
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/features/odl-yangtools-xpath-api/pom.xml
+++ b/features/odl-yangtools-xpath-api/pom.xml
@@ -19,6 +19,7 @@
     <artifactId>odl-yangtools-xpath-api</artifactId>
     <packaging>feature</packaging>
     <name>OpenDaylight :: Yangtools :: XPath API</name>
+    <description>YANG XPath API</description>
 
     <dependencies>
         <dependency>
