--- a/common/testutils/pom.xml
+++ b/common/testutils/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.opendaylight.odlparent</groupId>
         <artifactId>bundle-parent</artifactId>
-        <version>14.0.8</version>
+        <version>14.0.9-SNAPSHOT</version>
         <relativePath/>
     </parent>
 
