--- a/tools/yang-model-validator/pom.xml
+++ b/tools/yang-model-validator/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.opendaylight.odlparent</groupId>
         <artifactId>odlparent</artifactId>
-        <version>14.0.8</version>
+        <version>14.0.9-SNAPSHOT</version>
         <relativePath/>
     </parent>
 
