Fix binding-loader dependencies
We are using concepts, be sure to mention that in pom.xml.

Change-Id: If2e09838e2f0cd2955bb9438208527dd57b15295
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/binding/binding-loader/pom.xml
+++ b/binding/binding-loader/pom.xml
@@ -43,5 +43,9 @@
             <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>binding-spec</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>concepts</artifactId>
+        </dependency>
     </dependencies>
 </project>
