Enforce dependencies in bnd-parent
Our modern bundles should have their dependencies sorted, enforce that
from bnd-parent.

Change-Id: I06a21ee27391795e73ca384878dfdbe174cd7db8
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/codec/yang-data-codec-binfmt/pom.xml
+++ b/codec/yang-data-codec-binfmt/pom.xml
@@ -23,6 +23,8 @@
 
     <properties>
         <maven.javadoc.failOnWarnings>true</maven.javadoc.failOnWarnings>
+        <!-- FIXME: fix dependencies and remove this line -->
+        <odlparent.dependency.enforce>false</odlparent.dependency.enforce>
     </properties>
 
     <dependencies>
