--- a/yang/yang-repo-spi/pom.xml
+++ b/yang/yang-repo-spi/pom.xml
@@ -24,6 +24,8 @@
     <properties>
         <!-- FIXME: fix these up and set maven.javadoc.failOnWarnings=true -->
         <doclint>all,-missing</doclint>
+        <!-- FIXME: fix dependencies and remove this line -->
+        <odlparent.dependency.enforce>false</odlparent.dependency.enforce>
     </properties>
 
     <dependencies>
