--- a/docs/pom.xml
+++ b/docs/pom.xml
@@ -459,7 +459,7 @@
                         <link>https://www.slf4j.org/apidocs/</link>
                         <link>https://guava.dev/releases/33.4.0-jre/api/docs/</link>
 
-                        <link>https://www.javadoc.io/doc/org.opendaylight.odlparent/odlparent-docs/14.0.9/</link>
+                        <link>https://www.javadoc.io/doc/org.opendaylight.odlparent/odlparent-docs/14.1.0-SNAPSHOT/</link>
                     </links>
                     <groups>
                         <group>
