Apply maven-4 fixes
This is mostly just adding pom.xml to relativePath declarations, but
contains a few removals of duplicate stanzas.

Change-Id: I4a42d25388bdfc2773a47a86c7eacb4557b9a0cd
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/features/odl-yangtools-export/pom.xml
+++ b/features/odl-yangtools-export/pom.xml
@@ -13,7 +13,7 @@
         <groupId>org.opendaylight.yangtools</groupId>
         <artifactId>feature-parent</artifactId>
         <version>14.0.15-SNAPSHOT</version>
-        <relativePath>../parent</relativePath>
+        <relativePath>../parent/pom.xml</relativePath>
     </parent>
 
     <artifactId>odl-yangtools-export</artifactId>
