--- a/docs/pom.xml
+++ b/docs/pom.xml
@@ -13,7 +13,7 @@
         <groupId>org.opendaylight.yangtools</groupId>
         <artifactId>bundle-parent</artifactId>
         <version>14.0.15-SNAPSHOT</version>
-        <relativePath>../bundle-parent</relativePath>
+        <relativePath>../bundle-parent/pom.xml</relativePath>
     </parent>
 
     <artifactId>yangtools-docs</artifactId>
