Apply maven-4 fixes
This is mostly just adding pom.xml to relativePath declarations, but
contains a few removals of duplicate stanzas.

Change-Id: I4a42d25388bdfc2773a47a86c7eacb4557b9a0cd
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/binding/codegen-extensions/pom.xml
+++ b/binding/codegen-extensions/pom.xml
@@ -13,10 +13,8 @@
         <groupId>org.opendaylight.yangtools</groupId>
         <artifactId>binding-bundle-parent</artifactId>
         <version>14.0.15-SNAPSHOT</version>
-        <relativePath>../binding-bundle-parent</relativePath>
+        <relativePath>../binding-bundle-parent/pom.xml</relativePath>
     </parent>
-
-    <groupId>org.opendaylight.yangtools</groupId>
     <artifactId>codegen-extensions</artifactId>
     <name>${project.artifactId}</name>
     <packaging>bundle</packaging>
