--- a/model/pom.xml
+++ b/model/pom.xml
@@ -19,7 +19,7 @@
 
     <groupId>org.opendaylight.yangtools</groupId>
     <artifactId>model-aggregator</artifactId>
-    <version>13.0.10</version>
+    <version>13.0.11-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
