--- a/features/parent/pom.xml
+++ b/features/parent/pom.xml
@@ -18,7 +18,7 @@
 
     <groupId>org.opendaylight.yangtools</groupId>
     <artifactId>feature-parent</artifactId>
-    <version>13.0.11</version>
+    <version>13.0.12-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>${project.artifactId}</name>
     <description>Feature parent (based on template-feature-parent)</description>
