--- a/karaf/pom.xml
+++ b/karaf/pom.xml
@@ -15,7 +15,7 @@
 
     <groupId>org.opendaylight.yangtools</groupId>
     <artifactId>distribution-karaf</artifactId>
-    <version>13.0.11</version>
+    <version>13.0.12-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <!-- DO NOT install or deploy the karaf artifact -->
