--- a/model/rfc8040-model-api/pom.xml
+++ b/model/rfc8040-model-api/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.opendaylight.yangtools</groupId>
         <artifactId>bnd-parent</artifactId>
-        <version>13.0.11</version>
+        <version>13.0.12-SNAPSHOT</version>
         <relativePath>../../bnd-parent</relativePath>
     </parent>
 
