--- a/tests/tox.ini
+++ b/tests/tox.ini
@@ -11,6 +11,7 @@ passenv =
     HTTPS_PROXY
     no_proxy
     NO_PROXY
+    JAVA_HOME
 usedevelop = true
 basepython = python3
 deps =
@@ -23,3 +24,6 @@ commands =
 [pytest]
 minversion = 8.4
 addopts = -rAsv
+log_cli = true
+log_level = INFO
+log_format = %(asctime)s [%(levelname)s] %(message)s
