Add Allure reporting for pytest
Allure provides rich interactive test reporting mechanism, which is not
provided by standard pytest library. Automatically create allure test
reports for better comprehension of test results. Final tests reports
could be found under tests/allure_report folder.

JIRA: INTTEST-153
Change-Id: I02379748c35bc5b5b562eee039864ab1140ea865
Signed-off-by: Martin Balaz <martin.balaz@pantheon.tech>

--- a/tests/tox.ini
+++ b/tests/tox.ini
@@ -19,7 +19,7 @@ deps =
 
 [testenv:pytest]
 commands =
-    pytest {posargs}
+    pytest --alluredir=allure_report {posargs}
 
 [pytest]
 minversion = 8.4
