Add integration-tests profile for running pytests
To be able to run integraion tests using maven command, new profile
integration-tests was added. Using this profile it is possible
to run pytests integration tests as part of maven build.

JIRA: RELENG-170
Change-Id: I9d3cd8b30f604407af93df0f5b1c28558df8d408
Signed-off-by: Martin Balaz <martin.balaz@pantheon.tech>

--- a/tests/tox.ini
+++ b/tests/tox.ini
@@ -19,7 +19,7 @@ deps =
 
 [testenv:pytest]
 commands =
-    pytest --alluredir=allure_report {posargs}
+    pytest --alluredir=allure_report -vv {posargs}
 
 [pytest]
 minversion = 8.4
