WIP: resolve PRE-LINKAGE and LINKAGE phases separately
Select only involved sources and populate their
PRE-LINKAGE and LINKAGE namespaces before moving
to other ModelProcessingPhases

JIRA: YANGTOOLS-1112
Change-Id: I1ab9c6fca99ae507e0225e478a25bd0e56d115a1
Signed-off-by: tibor.kral <tibor.kral@pantheon.tech>

--- a/parser/yang-parser-reactor/pom.xml
+++ b/parser/yang-parser-reactor/pom.xml
@@ -55,5 +55,9 @@
             <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>yang-parser-spi</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>yang-ir</artifactId>
+        </dependency>
     </dependencies>
 </project>
