--- a/plugin/yang-maven-plugin/pom.xml
+++ b/plugin/yang-maven-plugin/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.opendaylight.odlparent</groupId>
         <artifactId>odlparent</artifactId>
-        <version>14.1.1</version>
+        <version>14.1.2-SNAPSHOT</version>
         <relativePath/>
     </parent>
 
@@ -84,11 +84,6 @@
             <scope>provided</scope>
         </dependency>
 
-        <dependency>
-            <groupId>com.github.spotbugs</groupId>
-            <artifactId>spotbugs-annotations</artifactId>
-            <optional>true</optional>
-        </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
