--- a/binding/binding-codegen/pom.xml
+++ b/binding/binding-codegen/pom.xml
@@ -44,14 +44,14 @@
             <artifactId>org.eclipse.jdt.annotation</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.eclipse.xtend</groupId>
+            <groupId>org.eclipse.xtext</groupId>
             <artifactId>org.eclipse.xtend.lib</artifactId>
-            <version>2.39.0</version>
+            <version>2.40.0</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.xtext</groupId>
             <artifactId>org.eclipse.xtext.xbase.lib</artifactId>
-            <version>2.39.0</version>
+            <version>2.40.0</version>
         </dependency>
         <dependency>
             <groupId>org.gaul</groupId>
@@ -103,9 +103,9 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.eclipse.xtend</groupId>
+                <groupId>org.eclipse.xtext</groupId>
                 <artifactId>xtend-maven-plugin</artifactId>
-                <version>2.39.0</version>
+                <version>2.40.0</version>
                 <executions>
                     <execution>
                         <goals>
