Simplify ThreadFactoryProvider suppressions
Do not generate @Generated nor @SupressFBWarnings and instead exclude
generated files from analysis.

Change-Id: Ib0c996317280613195bfed9afa589bbb7be8538e
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/common/util/pom.xml
+++ b/common/util/pom.xml
@@ -24,6 +24,10 @@
     <properties>
         <!-- FIXME: fix these up and set maven.javadoc.failOnWarnings=true -->
         <doclint>all,-missing</doclint>
+        <spotbugs.onlyAnalyze>
+            !org.opendaylight.yangtools.util.concurrent.ImmutableThreadFactoryProvider,
+            !org.opendaylight.yangtools.util.concurrent.ImmutableThreadFactoryProvider$Builder
+        </spotbugs.onlyAnalyze>
     </properties>
 
     <dependencies>
