--- a/artifacts/pom.xml
+++ b/artifacts/pom.xml
@@ -13,7 +13,7 @@
     <parent>
       <groupId>org.opendaylight.odlparent</groupId>
       <artifactId>odlparent-lite</artifactId>
-      <version>14.1.2</version>
+      <version>14.1.3-SNAPSHOT</version>
       <relativePath/>
     </parent>
 
